--- a/templates/list.html
+++ b/templates/list.html
@@ -1,16 +1,24 @@
 {%extends 'blank_layout.html'%}
 {% load static %}
 {%block content%}
+<hr>
 <h1>List</h1>
-<table>
-    <tr><th>Title</th><th>Poster</th><th>Year</th><th>Summary</th><th>Edit/Delete</th></tr>
+<style>
+    
+    table {
+        border: 1px black;
+        border-collapse: collapse;
+    }
+</style>
+<table border>
+    <tr><th><h3>Title</h3></th><th><h3>Poster</h3></th><th><h3>Year</h3></th><th><h3>Summary</h3></th><th><h3>Edit/Delete</h3></th></tr>
 {%for movie_obj in movies%}
 
 <tr>
-    <td><h1>Title : {{movie_obj.title|upper}}</h1></td>
+    <td><h1>{{movie_obj.title|upper}}</h1></td>
     <td> <img src="{{movie_obj.poster.url}}" alt=""  style="width: 220px; "></td>
-    <td><h4>Year : {{movie_obj.year|default:'Unavailable'}}</h4></td>
-    <td><h4>Summary : {{movie_obj.summary|default:'Unavailable'}}</h4></td>
+    <td><h4>{{movie_obj.year|default:'Unavailable'}}</h4></td>
+    <td><h4>{{movie_obj.summary|default:'Unavailable'}}</h4></td>
     <td><a href="{% url 'edit' movie_obj.id %}">Edit</a> / <a href="{% url 'delete' movie_obj.id %}">Delete</a></td>
 </tr>
 {%endfor%}
