--- a/templates/blank_layout.html
+++ b/templates/blank_layout.html
@@ -1,6 +1,8 @@
 {% load static %}
-<h1>Movie Project
-    <img src="{% static 'images/fire_pheonix.png' %}" width="150" height="100"/>
+<h1>
+    <img src="{% static 'images/Cinema.png' %}" width="225" height="150"/><br>
+    <strong><u>Movie Project</u></strong>
+    <hr>
 </h1>
 
 {%include 'menu.html'%}
