--- a/templates/list.html
+++ b/templates/list.html
@@ -17,9 +17,9 @@
 <tr>
     <td><h1>{{movie_obj.title|upper}}</h1></td>
     <td> <img src="{{movie_obj.poster.url}}" alt=""  style="width: 220px; "></td>
-    <td><h4>{{movie_obj.year|default:'Unavailable'}}</h4></td>
-    <td><h4>{{movie_obj.summary|default:'Unavailable'}}</h4></td>
-    <td><a href="{% url 'edit' movie_obj.id %}">Edit</a> / <a href="{% url 'delete' movie_obj.id %}">Delete</a></td>
+    <td><h3>{{movie_obj.year|default:'Unavailable'}}</h3></td>
+    <td><h3>{{movie_obj.summary|default:'Unavailable'}}</h3></td>
+    <td><a href="{% url 'edit' movie_obj.id %}"><strong>Edit</strong></a> / <a href="{% url 'delete' movie_obj.id %}"><strong>Delete</strong></a></td>
 </tr>
 {%endfor%}
 </table>
