--- a/templates/list.html
+++ b/templates/list.html
@@ -3,6 +3,14 @@
 {%block content%}
 <hr>
 <h1>List</h1>
+<div class="wrap">
+    <div class="search">
+       <input type="text" class="searchTerm" placeholder="Search Movie Name...">
+       <button type="submit" class="searchButton">
+         Search
+      </button>
+    </div>
+ </div>
 <style>
     
     table {
