--- a/templates/list.html
+++ b/templates/list.html
@@ -3,6 +3,12 @@
 {%block content%}
 <hr>
 <h1>List</h1>
+
+<form method="get">
+    <input type="text" name="query" placeholder="Search...">
+    <button type="submit">Search</button>
+</form>
+
 <style>
     
     table {
