--- a/templates/confirm_delete.html
+++ b/templates/confirm_delete.html
@@ -5,7 +5,7 @@
     <title>Confirm Delete</title>
 </head>
 <body>
-    <h1>Are you sure you want to delete this item?</h1>
+    <h1>Are you sure you want to delete {{title}}?</h1>
     <form method="post">
         {% csrf_token %}
         <input type="submit" value="Delete">
