--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,4 +1,5 @@
 <ul>
-    <li><a href="{%url 'create'%}">Create</a></li>
-    <li><a href="{%url 'list'%}">List</a></li>
+    <li><a href="{%url 'home'%}">Home</a></li>
+    <li><a href="{%url 'create'%}">Create Movie</a></li>
+    <li><a href="{%url 'signup'%}">SignUp</a></li>
 </ul>   
