--- a/templates/users/user_create.html
+++ b/templates/users/user_create.html
@@ -5,14 +5,13 @@
 
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    
     <p>
-        <label>Username : </label><input type="text" name="Username">
+        <label>username : </label><input type="text" name="username">
     </p>
     <p>
-        <label>Password : </label><input type="password" name="Password">
+        <label>password : </label><input type="password" name="password">
     </p>
-
-<button type="submit">SignUp</button>
+    <button type="submit">SignUp</button>
 </form>
+
 {%endblock content%}
