--- a/templates/confirm_delete.html
+++ b/templates/confirm_delete.html
@@ -9,7 +9,7 @@
     <form method="post">
         {% csrf_token %}
         <input type="submit" value="Delete">
-        <a href="{% url 'list' %}">Cancel</a>
+        <a href="{% url 'home' %}">Cancel</a>
     </form>
 </body>
 </html>
