--- a/templates/menu.html
+++ b/templates/menu.html
@@ -2,4 +2,7 @@
     <li><a href="{%url 'home'%}">Home</a></li>
     <li><a href="{%url 'create'%}">Create Movie</a></li>
     <li><a href="{%url 'signup'%}">SignUp</a></li>
+    <li><a href="{%url 'login'%}">Login</a></li>
+    <li><a href="{%url 'logout'%}">Logout</a></li>    
+
 </ul>   
