--- a/templates/blank_layout.html
+++ b/templates/blank_layout.html
@@ -1,4 +1,5 @@
 {% load static %}
+<title>Movie Project</title>
 <h1>
     <img src="{% static 'images/Cinema.png' %}" width="225" height="150"/><br>
     <strong><u>Movie Project</u></strong>
